--- a/main.html
+++ b/main.html
@@ -11,6 +11,24 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<table border="1">
+		<caption>Student Details</caption>
+		<tr>
+			<th>NAME</th>
+			<th>AGE</th>
+			<th>BRANCH</th>
+		</tr>
+		<tr>
+			<th>Shaw</th>
+			<th>20</th>
+			<th>CSE</th>
+		</tr>
+		<tr>
+			<th>Adil</th>
+			<th>21</th>
+			<th>ECE</th>
+		</tr>
+	</table>
 </body>
 
 </html>
