--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
@@ -11,7 +12,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-	<table border="1">
+	<table border="1" style="background-color: yellow;">
 		<caption>Student Details</caption>
 		<tr>
 			<th>NAME</th>
