--- a/main.html
+++ b/main.html
@@ -12,22 +12,22 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-	<table border="1" style="background-color: yellow;">
+	<table border="1px" style="background-color: yellow;">
 		<caption>Student Details</caption>
 		<tr>
-			<th>NAME</th>
-			<th>AGE</th>
-			<th>BRANCH</th>
+			<td>NAME</td>
+			<td>AGE</td>
+			<td>BRANCH</td>
 		</tr>
 		<tr>
-			<th>Shaw</th>
-			<th>20</th>
-			<th>CSE</th>
+			<td>Shaw</td>
+			<td>20</td>
+			<td>CSE</td>
 		</tr>
 		<tr>
-			<th>Adil</th>
-			<th>21</th>
-			<th>ECE</th>
+			<td>Adil</td>
+			<td>21</td>
+			<td>ECE</td>
 		</tr>
 	</table>
 </body>
