--- a/main.html
+++ b/main.html
@@ -12,12 +12,12 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-	<table border="1px" style="background-color: yellow;">
+	<table border="1" style="background-color: yellow;">
 		<caption>Student Details</caption>
 		<tr>
-			<td>NAME</td>
-			<td>AGE</td>
-			<td>BRANCH</td>
+			<th>NAME</th>
+			<th>AGE</th>
+			<th>BRANCH</th>
 		</tr>
 		<tr>
 			<td>Shaw</td>
